# md-wr

./: .gitlab-ci.yml  Cargo.toml  README.md  justfile  resources.gresource
.github/workflows/: ci.yml
src/: main.rs
src/custom_textview/: imp.rs  mod.rs
src/data/: gschemas.compiled
src/data/ui/: gschemas.compiled  resources.gresource.xml  text-editor.blp  text-editor.ui  window.blp  window.ui
