[package]
name = "md-wr"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.8.0", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
chrono = "0.4.41"
gio = "0.21.1"
glib = "0.21.1"
gtk = { version = "0.10.0", package = "gtk4", features = ["v4_12"] }
just = "1.42.4"
markdown-ppp = "2.1.0"
reqwest = "0.12.23"
tokio = "1.47.1"
uuid = "1.18.1"

